syntax = "proto3";

option go_package = "scmc/rpc/pb/common";

package common;

enum Errno {
    // system level
    // https://grpc.github.io/grpc/core/md_doc_statuscodes.html
    OK                 = 0;  // 成功
    Canceled           = 1;
    Unknown            = 2;  // 未知错误
    InvalidArgument    = 3;  // 客户端参数错误
    DeadlineExceeded   = 4;
    NotFound           = 5;  // 资源不存在
    AlreadyExists      = 6;  // 资源已存在
    PermissionDenied   = 7;  // 无权限操作
    ResourceExhausted  = 8;
    FailedPrecondition = 9;
    Aborted            = 10;
    OutOfRange         = 11;
    Unimplemented      = 12;  // 接口未实现
    Internal           = 13;  // 内部错误
    Unavailable        = 14;
    DataLoss           = 15;
    Unauthenticated    = 16;  // 认证失败

    // user related
    UserAlreadyExist = 201;  // AlreadyExists
    UserNotExist     = 202;  // NotFound
    WrongPassword    = 203;
    InvalidSession   = 204;  // Unauthenticated
    SessionExpired   = 205;  // Unauthenticated
    NoPermission     = 206;  // PermissionDenied

    // containers
    CProcProtectionFailed  = 301;  // 进程保护配置失败
    CNprocProtectionFailed = 302;  // 网络进程白名单配置失败
    CFileProtectionFailed  = 303;  // 文件保护配置失败
    CCmdOperationFailed    = 304;  // 启停控制配置失败
    CNetworkRuleFailed     = 305;  // 网络访问规则配置失败
}
